--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.0",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "valid-url": "^1.0.9"
   }
 }
