--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=5000
 MONGODB_PASS=85%40Rt*56
 SECRET_KEY=secretkey
+CLOUDINARY_CLOUD_NAME=dfcbnnzyo
+CLOUDINARY_CLOUD_KEY=656835218886117
+CLOUDINARY_CLOUD_SECRET=Sf2_qALpLNS_MiIjrhVj2GwaqWs
