--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -12,7 +12,7 @@ jobs:
             - name: Checkout Source
               uses: actions/checkout@v4
             - name: Login to docker hub
-              run:  docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASS }}
+              run:  docker login -u ${{ secrets.DOCKER_USERNAME }} -p "${{ secrets.DOCKER_PASS }}"
             - name: Build Docker Image
               run: docker build -t  ritik819/softwarebackend .
             - name: Publish Image to docker hub
