--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -12,7 +12,7 @@ jobs:
             - name: Checkout Source
               uses: actions/checkout@v4
             - name: Login to docker hub
-              run:  docker login -u ritik819 -p $KhuZmbsj9wY_+J
+              run:  docker login -u ritik819 -p '$KhuZmbsj9wY_+J'
             - name: Build Docker Image
               run: docker build -t  ritik819/softwarebackend .
             - name: Publish Image to docker hub
