--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,6 +23,6 @@ jobs:
         runs-on: self-hosted 
         steps: 
             - name: Pull image from docker hub
-              run: docker pull ritik819/softwarebackend:latest
+              run:  sudo docker pull ritik819/softwarebackend:latest
             - name: Run Docker container
               run: docker run -d -p 5000:5000 --name software-backend-container -e MONGODB_PASS='${{secrets.MOGODB_PASS}}' ritik819/softwarebackend:latest
