--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -12,7 +12,7 @@ jobs:
             - name: Checkout Source
               uses: actions/checkout@v4
             - name: Login to docker hub
-              run:  docker login -u ritik819 -p '$KhuZmbsj9wY_+J'
+              run:  docker login -u ritik819 -p '${{secrets.DOCKER_PASSWORD}}'
             - name: Build Docker Image
               run: docker build -t  ritik819/softwarebackend .
             - name: Publish Image to docker hub
@@ -25,4 +25,4 @@ jobs:
             - name: Pull image from docker hub
               run:  sudo docker pull ritik819/softwarebackend:latest
             - name: Run Docker container
-              run:  sudo docker run -d -p 5000:5000 --name software-backend-container -e MONGODB_PASS='85@Rt*56' ritik819/softwarebackend:latest
+              run:  sudo docker run -d -p 5000:5000 --name software-backend-container -e MONGODB_PASS='${{secrets.MONGODBB_PASSWORD}}' PORT=${{secrets.PORT}} SECRET_KEY=${{secrets.SECRET_KEY}} ritik819/softwarebackend:latest
