--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,4 +25,5 @@ jobs:
             - name: Pull image from docker hub
               run:  sudo docker pull ritik819/softwarebackend:latest
             - name: Run Docker container
-              run:  sudo docker run -d -p 5000:5000 --name software-backend-container -e MONGODB_PASS='${{secrets.MONGODBB_PASSWORD}}' PORT=${{secrets.PORT}} SECRET_KEY=${{secrets.SECRET_KEY}} ritik819/softwarebackend:latest
+              run:  sudo docker run -d -p 5000:5000 --name software-backend-container -e MONGODB_PASS='${{secrets.MONGODBB_PASSWORD}}' -e PORT=5000 -e SECRET_KEY='${{secrets.SECRET_KEY}}' ritik819/softwarebackend:latest
+
