--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,11 +19,20 @@ jobs:
               run: docker push ritik819/softwarebackend:latest
     
     deploy: 
-        needs: build
-        runs-on: self-hosted 
-        steps: 
-            - name: Pull image from docker hub
-              run:  sudo docker pull ritik819/softwarebackend:latest
-            - name: Run Docker container
-              run:  sudo docker run -d -p 5000:5000 --name software-backend-container -e MONGODB_PASS='${{secrets.MONGODBB_PASSWORD}}' -e PORT=5000 -e SECRET_KEY='${{secrets.SECRET_KEY}}' ritik819/softwarebackend:latest
+                needs: build
+                runs-on: self-hosted 
+                steps: 
+                    - name: Pull image from docker hub
+                      run: sudo docker pull ritik819/softwarebackend:latest
+                    - name: Stop and remove existing container (if exists)
+                      run: |
+                        sudo docker stop software-backend-container || true
+                        sudo docker rm software-backend-container || true
+                    - name: Run Docker container
+                      run: |
+                        sudo docker run -d -p 5000:5000 --name software-backend-container \
+                            -e MONGODB_PASS='${{secrets.MONGODBB_PASSWORD}}' \
+                            -e PORT='${{secrets.PORT}}' \
+                            -e SECRET_KEY='${{secrets.SECRET_KEY}}' \
+                            ritik819/softwarebackend:latest
 
