--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "valid-url": "^1.0.9"
   }
 }
